<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ijetty_logo" />


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <Button
                android:id="@+id/start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/start_jetty" />

            <Button
                android:id="@+id/stop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/stop_jetty" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <Button
                android:id="@+id/config"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/config_jetty" />

            <Button
                android:id="@+id/view_webApps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/download_webapp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/console_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/console"
        android:textAppearance="@style/H1" />

    <ScrollView
        android:id="@+id/consoleScroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <TextView
            android:id="@+id/console"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:textAppearance="@style/footer" />
    </ScrollView>


</LinearLayout>

